--- a/css/banner/homologaciones/banner-homologaciones-pc.css
+++ b/css/banner/homologaciones/banner-homologaciones-pc.css
@@ -3,7 +3,7 @@
 
     #banner-homologaciones {
         position: absolute;
-        right: 10vw;
+        right: calc(4*var(--size-horizontal));
         top: var(--size-vertical);
 
         height: 80%;
