--- a/css/header.css
+++ b/css/header.css
@@ -45,11 +45,19 @@ header>#logo {
     }
 }
 
-@media only screen and (max-width:1200px) {  /* -- Thin PC -- */
+
+@media (max-aspect-ratio:1.5/1) {  /* -- Thin PC -- */
     header>#tfno {
         position: inherit;
         left: unset;
         transform: unset;
+    }
+}
+
+@media (max-aspect-ratio:1.15/1) {  /* -- Thinest PC -- */
+    
+    header>#menu {
+        display: none;
     }
 }
 
